final fix for person-link (use the right classes)

--- a/website/02-Education/moocs/pphr/02-lecturers-part2.html
+++ b/website/02-Education/moocs/pphr/02-lecturers-part2.html
@@ -1,21 +1,16 @@
 <style>
-a[id] {
-    padding-top: 92px !important;
-    margin-top: -92px !important;
-    display: inline-block;
-}
+
 </style>
-<div class="table_accordion">
-    <a id="ya"></a>
+<div class="table_accordion"> 
+    <a id="ya" class="person-link"></a>
     <div class="table_people_cell"><img class="img_persona" src="files/eiuc/pphr/faculty/Yousra_Abourabi_gchumanrights.jpg" alt="Yousra Abourabi - Global Campus">
         <div class="description_page_programme no_border no_padding no_margin_bottom">
             <p class="ruolo_persona titolo_gc_arab">Université Internationale de Rabat - GC Arab World</p>
             <p class="subtitle_page_programme margin_bottom_20">Yousra Abourabi</p>
             <p class="margin_bottom_20">Yousra Abourabi is a doctor in political science from the University of Lyon Jean Moulin. Her thesis, defended in 2016, focused on African politics in Morocco. </p>
-            <!-- <p class="margin_bottom_20">She holds a PhD in Political Science from Sorbonne University, PARIS I Panthéon-Sorbonne, a Post Graduate Diploma in High European Studies.</p> -->
             <div class="text_read_more">
                 <p class="margin_bottom_20">After teaching at the University of Lyon 3, she joined the UIR. As an assistant professor at Sciences po Rabat, she teaches political science, international relations and African governance.</p>
-                <p class="margin_bottom_20"> As a researcher associated with LEPOSHS, she is interested in diplomatic issues and sectoral cooperation (climate, migration, gender) in Africa. She recently published a book on "Morocco" by De Boeck editions.</p>
+                <p class="margin_bottom_20">As a researcher associated with LEPOSHS, she is interested in diplomatic issues and sectoral cooperation (climate, migration, gender) in Africa. She recently published a book on "Morocco" by De Boeck editions.</p>
             </div>
             <div class="accordion accordion_gc_south_europe read_more">
                 <div class="icon_e_title_accordion">
@@ -28,14 +23,15 @@ a[id] {
             </div>
         </div>
     </div>
-    <a id="bc"></a>
+    <a id="bc" class="person-link"></a>
     <div class="table_people_cell"><img class="img_persona" src="files/eiuc/pphr/faculty/Bencharat_Chua_gchumanrights.jpg" alt="Bencharat Chua - Global Campus">
         <div class="description_page_programme no_border no_padding no_margin_bottom">
             <p class="ruolo_persona titolo_gc_asia_pacific">Mahidol University, Bangkok - GC Asia Pacific</p>
             <p class="subtitle_page_programme margin_bottom_20">Bencharat Chua</p>
-            <p class="margin_bottom_20">Sriprapha Petcharamesree is a lecturer at the Institute of Human Rights and Peace Studies, Mahidol University, Thailand.</p>
+            <p class="margin_bottom_20">Bencharat Sae Chua is a lecturer at the Institute of Human Rights and Peace Studies, Mahidol University, Thailand, where she also serves as the academic coordinator of APMA.</p>
             <div class="text_read_more">
-                <p class="margin_bottom_20">She was appointed by the Thai Government the Thai representative to the ASEAN Intergovernmental Commission on Human Rights where she was serving between October 2009 and December 2012.Her research and expertise focus on human rights, ASEAN/Southeast Asian studies, migration, including statelessness and citizenship, business and human rights, and international relations. </p>
+                <p class="margin_bottom_20"> Before joining Mahidol University, Bencharat worked with non-governmental organizations in Thailand and still keeps her engagement with grassroot social movements.</p>
+                <p>Her research interest is on the culture of human rights, social movements, and citizenship rights. With the recent political conflicts in Thailand, she also focuses on the contention over the meaning of democracy and human rights, and the state of human rights in authoritarian regimes. </p>
             </div>
             <div class="accordion accordion_gc_south_europe read_more">
                 <div class="icon_e_title_accordion">
@@ -48,36 +44,15 @@ a[id] {
             </div>
         </div>
     </div>
-    <a id="fbr"></a>
-    <div class="table_people_cell"><img class="img_persona" src="files/eiuc/euconvince/Florence_Benoit_Rohmer_global_campus_eiuc.jpg" alt="Prof. Florence Bénoît-Rohmer - Global Campus">
+    <a id="vg" class="person-link"></a>
+    <div class="table_people_cell"><img class="img_persona" src="files/eiuc/img_global_campus_chair.jpg" alt="Veronica Gomez - Global Campus">
         <div class="description_page_programme no_border no_padding no_margin_bottom">
-            <!--<p class="ruolo_persona titolo_gc_europe">Academic Responsible</p>-->
-            <p class="subtitle_page_programme margin_bottom_20">Florence Bénoît-Rohmer</p>
-            <p class="margin_bottom_20">Prof. Bénoît-Rohmer is a French jurist, specializing in European Law and Human Rights, and currently a Professor of Public Law at the University of Strasbourg.</p>
+            <p class="ruolo_persona titolo_gc_europe">University of San Martin, Buenos Aires - GC Latin America and the Caribbean</p>
+            <p class="subtitle_page_programme margin_bottom_20">Veronica Gomez</p>
+            <p class="margin_bottom_20">Veronica Gomez is the current Global Campus President. She is the Co-Director of the Master’s Programme in Human Rights and Democratisation in Latin America and the Caribbean (LATMA).
             <!--<p class="margin_bottom_20">She holds a PhD in Political Science from Sorbonne University, PARIS I Panthéon-Sorbonne, a Post Graduate Diploma in High European Studies.</p>-->
             <div class="text_read_more">
-                <p class="margin_bottom_20">She was the Dean of the Faculty of Law at Robert Schuman University from 2000 to 2003, and President of the Robert Schuman University (Strasbourg III) from July 2003 to December 2008. Between 2009 and 2015 she was also the Secretary General of the European Inter-University Centre for Human Rights and Democratisation. Her academic interest is focused on mechanisms for the preservation of human rights both within the European Union and the Council of Europe, especially the European Convention on Human Rights and the European Social Charter. She has also worked on minority issues and has published extensively on the above mentioned topics.</p>
-            </div>
-            <div class="accordion accordion_gc_south_europe read_more">
-                <div class="icon_e_title_accordion">
-                    <div class="piu_accordion">
-                        <div class="verticale">[nbsp]</div>
-                        <div class="orizzontale">[nbsp]</div>
-                    </div>
-                    <p class="title_accordion more_less">Read More</p>
-                </div>
-            </div>
-        </div>
-    </div>
-    <a id="pdp"></a>
-    <div class="table_people_cell"><img class="img_persona" src="files/eiuc/euconvince/Pietro_de_pierini_global_campus.jpg" alt="Dr. Pietro de Perini - Global Campus">
-        <div class="description_page_programme no_border no_padding no_margin_bottom">
-            <!--<p class="ruolo_persona titolo_gc_europe">Academic Responsible</p>-->
-            <p class="subtitle_page_programme margin_bottom_20">Dr. Pietro de Perini</p>
-            <p class="margin_bottom_20">Dr. de Perini is a Research Fellow at the Human Rights Centre of the University of Padova, where he works on several education, research and outreach activities. He is also an editor of the Italian Yearbook of Human Rights, the managing editor of Peace Human Rights Governance - PHRG, and an editor of SUDEUROPA.</p>
-            <!--<p class="margin_bottom_20">She holds a PhD in Political Science from Sorbonne University, PARIS I Panthéon-Sorbonne, a Post Graduate Diploma in High European Studies.</p>-->
-            <div class="text_read_more">
-                <p class="margin_bottom_20">His doctoral research deals with the promotion of intercultutural dialogue in EU policies towards the Mediterranean since the end of the cold war. Pietro’s research interests focus on international human rights institutions with particular regards to regional organisations (European Union, Council of Europe, OSCE), foreign policy and human rights, intercultural dialogue and human rights, EU foreign policy and Euromediterranean relations, communication of human rights.</p>
+                <p class="margin_bottom_20">Her professional path includes her role as Principal Specialist at the Inter-American Commission of Human Rights of the Organisation of American States in Washington (1998-2009) and as a Senior Advisor on Human Rights at the Ministry of Foreign Affairs of Argentina (2010-2011).</p>
             </div>
             <div class="accordion accordion_gc_south_europe read_more">
                 <div class="icon_e_title_accordion">
