fix to double id on lecturers - outline initial draft

--- a/website/02-Education/moocs/pphr/02-lecturers-part2.html
+++ b/website/02-Education/moocs/pphr/02-lecturers-part2.html
@@ -87,7 +87,7 @@
             </div>
         </div>
     </div>
-    <a id="am" class="person-link"></a>
+    <a id="amu" class="person-link"></a>
     <div class="table_people_cell"><img class="img_persona" src="files/eiuc/Asim_Mujkic.jpg" alt="Asim Mujkić - Global Campus">
         <div class="description_page_programme no_border no_padding no_margin_bottom">
             <p class="ruolo_persona titolo_gc_south_east_europe">University of Sarajevo</p>
