--- a/website/02-Education/moocs/pphr/outline.html
+++ b/website/02-Education/moocs/pphr/outline.html
@@ -166,68 +166,62 @@
 }
 </style>
 <p class="subtitle_page_programme">Course Outline</p>
-<p class="margin_bottom_20">The course encompasses a 9-week period. Participants are expected to engage in approximately 45 hours of active learning through readings, videos, discussions, group-work/role-plays and quizzes. </p>
+<!-- <p class="margin_bottom_20">The course encompasses a 9-week period. Participants are expected to engage in approximately 45 hours of active learning through readings, videos, discussions, group-work/role-plays and quizzes. </p>
 <p class="margin_bottom_20">The course is articulated in four modules:</p>
 <p class="margin_bottom_20"><strong>Module 1</strong> focuses on <strong>the general framework of the Study</strong> and looks at the legal framework, applicable standards, guiding principles, definitions, objectives and methodology. It also offers an overview of the history of the Global Study and its links with the work of the UN CRC Committee and the Special Rapporteur on the Sale and Sexual Exploitation of Children.</p>
 <p class="margin_bottom_20"><strong>Module 2</strong> deals with the <strong>cross-cutting themes</strong> that have been identified in the Study: deprivation of liberty, children’s participation, disability, gender and health.</p>
 <p class="margin_bottom_20"><strong>Module 3</strong> is dedicated to the <strong>six focus areas</strong> of the Study: administration of justice, children living in places of detention with their primary caregivers, migration-related detention, children deprived of liberty in institutions, in armed conflict and for national security reasons.</p>
-<p class="margin_bottom_20"><strong>Module 4</strong> reveals the ‘behind the scenes’ of the making of the <strong>UN Global Study in practice</strong> and discusses challenges, opportunities, recommendations and the way forward.</p>
+<p class="margin_bottom_20"><strong>Module 4</strong> reveals the ‘behind the scenes’ of the making of the <strong>UN Global Study in practice</strong> and discusses challenges, opportunities, recommendations and the way forward.</p> -->
 <p class="margin_bottom_20">[nbsp]</p>
-<h3 id="timeline" style="text-align:center; font-weight: 400;">Module 1 - General framework of the Global Study</h3>
+<h3 id="timeline" style="text-align:center; font-weight: 400;">Module 1 - International framework </h3>
 <ul class="timeline">
     <li>
         <div class="timeline-badge first1">1</div>
         <div class="timeline-panel">
             <div class="timeline-heading">
-                <h4 class="timeline-title">18 - 24 November 2019</h4>
-                <h4 class="timeline-title">Introduction and framework of the UN Global Study</h4>
+                <h4 class="timeline-title">Class 1</h4>
+                <h4 class="timeline-title">Introduction</h4>
             </div>
             <div class="timeline-body">
                 <p>
-                    <br><a class="titolo_gc_europe" href="{{link_url::518}}#mn" title="Manfred Nowak">Manfred Nowak</a>, SG Global Campus of Human Rights / Global Study Independent Expert
-                    <br><a class="titolo_gc_europe" href="{{link_url::518}}#msp" title="Marta Santos Pais">Marta Santos Pais</a>, SRSG on Violence against Children 2009-2019
-                    <br><a class="titolo_gc_europe" href="{{link_url::518}}#as" title="Ann Skelton">Ann Skelton</a>, University of Pretoria/CRC Committee
-                    <br><a class="titolo_gc_europe" href="{{link_url::518}}#bm" title="Benyam Mezmur">Benyam Mezmur</a>, CRC Committee
-                    <br><a class="titolo_gc_europe" href="{{link_url::518}}#vt" title="Vitit Muntarbhorn">Vitit Muntarbhorn</a>, Chulalongkorn University
+                    <br><a class="titolo_gc_europe" href="{{link_url::546}}#mn" title="Manfred Nowak">Manfred Nowak</a>, Secretary-General of the Global Campus of Human Rights
+                    <br><a class="titolo_gc_europe" href="{{link_url::546}}#gu" title="George Ulrich">George Ulrich</a>,  Academic Director, Global Campus of Human Rights
                 </p>
             </div>
         </div>
     </li>
 </ul>
-<h3 id="timeline">Module 2 - A transversal approach</h3>
+
 <ul class="timeline">
     <li class="timeline-inverted">
         <div class="timeline-badge third3">2</div>
         <div class="timeline-panel">
             <div class="timeline-heading">
-                <h4 class="timeline-title">25 November - 1 December 2019</h4>
-                <h4 class="timeline-title">Cross-cutting themes of the Global Study</h4>
+                <h4 class="timeline-title">Class 2</h4>
+                <h4 class="timeline-title">International protection of human rights</h4>
             </div>
             <div class="timeline-body">
                 <p>
-                    <br><a class="titolo_gc_europe" href="{{link_url::518}}#mn" title="Manfred Nowak">Manfred Nowak</a>, SG Global Campus of Human Rights / Global Study Independent Expert - <strong>Webinar</strong>
-                    <br><a class="titolo_gc_europe" href="{{link_url::518}}#uk" title="Ursula Kilkelly">Ursula Kilkelly</a>, University College Cork
-                    <br><a class="titolo_gc_europe" href="{{link_url::518}}#cda" title="Catalina Devandas Aguilar">Catalina Devandas Aguilar</a>, UN Special Rapporteur on persons with disabilities
-                    <br><a class="titolo_gc_europe" href="{{link_url::518}}#mgt" title="Meskerem Geset Tachune">Meskerem Geset Tachunek</a>, UN Working Group on Discrimination against Women
-                    <br><a class="titolo_gc_europe" href="{{link_url::518}}#sk" title="Stuart Kinner">Stuart Kinner</a>, University of Melbourne
+                    <br><a class="titolo_gc_europe" href="{{link_url::546}}#fgi" title="Felipe Gomez Isa">Felipe Gomez Isa</a>, University of Bilbao, GC Europe
                 </p>
             </div>
         </div>
     </li>
 </ul>
-<h3 id="timeline" style="text-align:center; font-weight: 400;">Module 3 - Focus areas</h3>
+<h3 id="timeline" style="text-align:center; font-weight: 400;">Module 2 - Regional perspectives </h3>
 <ul class="timeline">
     <li>
         <div class="timeline-badge sixth6">3</div>
         <div class="timeline-panel">
             <div class="timeline-heading">
-                <h4 class="timeline-title">2 - 8 December 2019</h4>
-                <h4 class="timeline-title">Administration of justice</h4>
+                <h4 class="timeline-title">Class 3</h4>
+                <h4 class="timeline-title">Human rights challenges in Europe</h4>
             </div>
             <div class="timeline-body">
                 <p>
-                    <br><a class="titolo_gc_europe" href="{{link_url::518}}#mb" title="Moritz Birk">Moritz Birk</a>, Ludwig Boltzmann Institute of Human Rights
-                    <br><a class="titolo_gc_europe" href="{{link_url::518}}#hs" title="Helmut Sax">Helmut Sax</a>, Ludwig Boltzmann Institute of Human Rights
+                    <br><a class="titolo_gc_europe" href="{{link_url::546}}#go" title="Gerd Oberleitner">Gerd Oberleitner</a>, University of Graz, GC Europe
+                    <br><a class="titolo_gc_europe" href="{{link_url::546}}#am" title="Anna Margaryan">Anna Margaryan</a>, Yerevan State University, GC Caucasus
+                    <br><a class="titolo_gc_europe" href="{{link_url::546}}#amu" title="Asim Mujkić">Asim Mujkić</a>, University of Sarajevo, GC South East Europe
                 </p>
             </div>
         </div>
@@ -236,12 +230,12 @@
         <div class="timeline-badge third3">4</div>
         <div class="timeline-panel">
             <div class="timeline-heading">
-                <h4 class="timeline-title">9 - 15 December 2019</h4>
-                <h4 class="timeline-title">Places of detention with caregivers</h4>
+                <h4 class="timeline-title">Class 4</h4>
+                <h4 class="timeline-title">Promoting and protecting human rights in Africa</h4>
             </div>
             <div class="timeline-body">
                 <p>
-                    <br><a class="titolo_gc_europe" href="{{link_url::518}}#ca" title="Chiara Altafin">Chiara Altafin</a>, Global Campus of Human Rights
+                    <br><a class="titolo_gc_europe" href="{{link_url::546}}#fv" title="Frans Viljoen">Frans Viljoen</a>, University of Pretoria, GC Africa
                 </p>
             </div>
         </div>
@@ -250,12 +244,12 @@
         <div class="timeline-badge third3">5</div>
         <div class="timeline-panel">
             <div class="timeline-heading">
-                <h4 class="timeline-title">16 - 22 December 2019</h4>
-                <h4 class="timeline-title">Migration related reasons</h4>
+                <h4 class="timeline-title">Class 5</h4>
+                <h4 class="timeline-title">Human rights protection in the Americas</h4>
             </div>
             <div class="timeline-body">
                 <p>
-                    <br><a class="titolo_gc_europe" href="{{link_url::518}}#mb" title="-	Michael Bochenek">- Michael Bochenek</a>, Human Rights Watch
+                    <br><a class="titolo_gc_europe" href="{{link_url::546}}#vg" title="Veronica Gomez">Veronica Gomez</a>, University of San Martin, Buenos Aires, President of the Global Campus of Human Rights
                 </p>
             </div>
         </div>
@@ -264,12 +258,13 @@
         <div class="timeline-badge third3">6</div>
         <div class="timeline-panel">
             <div class="timeline-heading">
-                <h4 class="timeline-title">23 - 29 December 2019</h4>
-                <h4 class="timeline-title">Institutions</h4>
+                <h4 class="timeline-title">Class 6</h4>
+                <h4 class="timeline-title">Human rights in Asia Pacific</h4>
             </div>
             <div class="timeline-body">
                 <p>
-                    <br><a class="titolo_gc_europe" href="{{link_url::518}}#as" title="Ann Skelton">Ann Skelton</a>, University of Pretoria/CRC Committee
+                    <br><a class="titolo_gc_europe" href="{{link_url::546}}#bc" title="Bencharat Chua">Bencharat Chua</a>, Mahidol University, Bangkok, GC Asia Pacific
+                    <br><a class="titolo_gc_europe" href="{{link_url::546}}#sp" title="Sriprapha Petcharamesree">Sriprapha Petcharamesree</a>, Mahidol University, Bangkok, GC Asia Pacific
                 </p>
             </div>
         </div>
@@ -278,47 +273,12 @@
         <div class="timeline-badge third3">7</div>
         <div class="timeline-panel">
             <div class="timeline-heading">
-                <h4 class="timeline-title">30 December 2019 – 5 January 2020</h4>
-                <h4 class="timeline-title">Armed conflicts</h4>
+                <h4 class="timeline-title">Class 7</h4>
+                <h4 class="timeline-title">The Arab world and human rights</h4>
             </div>
             <div class="timeline-body">
                 <p>
-                    <br><a class="titolo_gc_europe" href="{{link_url::518}}#jb" title="Jo Becker">Jo Becker</a>, Human Rights Watch
-                </p>
-            </div>
-        </div>
-    </li>
-    <li class="timeline-inverted">
-        <div class="timeline-badge third3">8</div>
-        <div class="timeline-panel">
-            <div class="timeline-heading">
-                <h4 class="timeline-title">6 - 12 January 2020</h4>
-                <h4 class="timeline-title">National security</h4>
-            </div>
-            <div class="timeline-body">
-                <p>
-                    <br><a class="titolo_gc_europe" href="{{link_url::518}}#jb" title="Jo Becker">Jo Becker</a>, Human Rights Watch
-                </p>
-            </div>
-        </div>
-    </li>
-</ul>
-<h3 id="timeline" style="text-align:center; font-weight: 400;">Module 4 - The Global Study in practice</h3>
-<ul class="timeline">
-    <li>
-        <div class="timeline-badge first1">9</div>
-        <div class="timeline-panel">
-            <div class="timeline-heading">
-                <h4 class="timeline-title">13 - 19 January 2020</h4>
-                <h4 class="timeline-title">Behind the scenes and recommendations </h4>
-            </div>
-            <div class="timeline-body">
-                <p>
-                    <br><a class="titolo_gc_europe" href="{{link_url::518}}#mn" title="Manfred Nowak">Manfred Nowak</a>, SG Global Campus of Human Rights / Global Study Independent Expert
-                    <br><a class="titolo_gc_europe" href="{{link_url::518}}#gy" title="Georges Younes">Georges Younes</a>, Global Study Coordination Team
-                    <br><a class="titolo_gc_europe" href="{{link_url::518}}#mk" title="Manu Krishan">Manu Krishan</a>, Global Study Coordination Team
-                    <br><a class="titolo_gc_europe" href="{{link_url::518}}#ls" title="Łukasz Szoszkiewicz">Łukasz Szoszkiewicz</a>, Adam Mickewicz University
-                    <br><a class="titolo_gc_europe" href="{{link_url::518}}#bvk" title="Benoit van Keirsbilck">Benoit van Keirsbilck</a>, Defence for Children International
+                    <br><a class="titolo_gc_europe" href="{{link_url::546}}#ya" title="Yousra Amourabi">Yousra Amourabi</a>, Université Internationale de Rabat
                 </p>
             </div>
         </div>
