--- a/website/02-Education/moocs/pphr/media-toolkit.html
+++ b/website/02-Education/moocs/pphr/media-toolkit.html
@@ -1,6 +1,6 @@
 <!-- HEADER TRAILER -->
 <div class="video169_container">
-	<iframe class="video169" src="https://www.youtube.com/embed/EEBUEkL2XlY?modestbranding=1" frameborder="0" allowfullscreen=""></iframe>
+    <iframe class="video169" src="https://www.youtube.com/embed/ydLxRmB5ETU" frameborder="0" allowfullscreen=""></iframe>
 </div>
 
 
