--- a/website/02-Education/moocs/pphr/media-toolkit.html
+++ b/website/02-Education/moocs/pphr/media-toolkit.html
@@ -16,7 +16,7 @@
             </div>
         </div>
         <div class="list_accordion">
-            <p class="margin_bottom_20 ">YouTube Video Teaser: <a class="titolo_gc_europe" href="https://www.youtube.com/watch?v=EEBUEkL2XlY" target="_blank">https://www.youtube.com/watch?v=EEBUEkL2XlY</a></p>
+            <p class="margin_bottom_20 ">YouTube Video Teaser: <a class="titolo_gc_europe" href="https://www.youtube.com/watch?v=ydLxRmB5ETU" target="_blank">https://www.youtube.com/watch?v=ydLxRmB5ETU</a></p>
         </div>
     </div>
 </div>
