correct path for FB/TW/IG/Pics

--- a/website/02-Education/moocs/pphr/media-toolkit.html
+++ b/website/02-Education/moocs/pphr/media-toolkit.html
@@ -68,11 +68,11 @@
             </div>
         </div>
         <div class="list_accordion">
-            <p class="margin_bottom_20">This document contains the official Poster for the MOOC on <em>Children Deprived of Liberty: Learning from the UN Global Study</em>. It can be printed[nbsp]on both sides[nbsp]and in different sizes [from A5 (148 × 210 mm) to A2 (420 x 594 mm)]</p>
-            <div class="box_vertical_a4_container"><iframe class="box_vertical_a4" src="https://drive.google.com/file/d/1ZF89CLIzC18TvXJwYgFl6VIPvMNE_wrc/preview"></iframe></div>
+            <p class="margin_bottom_20">This document contains the official Poster for the MOOC on <em>Promoting and Protecting Human Rights: a Global Overview</em>. It can be printed[nbsp]on both sides[nbsp]and in different sizes [from A5 (148 × 210 mm) to A2 (420 x 594 mm)]</p>
+            <div class="box_vertical_a4_container"><iframe class="box_vertical_a4" src="https://drive.google.com/file/d/1IIJfspFCMz93kkH0diSm1Gm-irqIqZp3/preview"></iframe></div>
             <p>[nbsp]</p>
-            <div class="download"><a href="https://drive.google.com/open?id=1ZF89CLIzC18TvXJwYgFl6VIPvMNE_wrc" target="_blank"> <img class="icona_download" src="files/eiuc/icona_download.svg" alt="icona download"></a>
-                <p class="titolo_gc_europe"><a class="download" href="https://drive.google.com/open?id=1ZF89CLIzC18TvXJwYgFl6VIPvMNE_wrc" target="_blank">Download</a></p>
+            <div class="download"><a href="https://drive.google.com/open?id=1IIJfspFCMz93kkH0diSm1Gm-irqIqZp3" target="_blank" download="Poster MOOC PPHR 2020.pdf"> <img class="icona_download" src="files/eiuc/icona_download.svg" alt="icona download"></a>
+                <p class="titolo_gc_europe"><a class="download" href="1IIJfspFCMz93kkH0diSm1Gm-irqIqZp3" target="_blank" download="Poster MOOC PPHR 2020.pdf">Download</a></p>
             </div>
         </div>
     </div>
@@ -91,11 +91,11 @@
             </div>
         </div>
         <div class="list_accordion">
-            <p class="margin_bottom_20">This document contains the official Info Sheet about the MOOC on <em>Children Deprived of Liberty: Learning from the UN Global Study</em>. It can be printed in different sizes [from A5 (148 × 210 mm) to A2 (420 x 594 mm)]</p>
-            <div class="box_vertical_a4_container"><iframe class="box_vertical_a4" src="https://drive.google.com/file/d/1JwBjmAWeoEpZE3sbaXwyc_LI2GA_qH09/preview"></iframe></div>
+            <p class="margin_bottom_20">This document contains the official Info Sheet about the MOOC on <em>Promoting and Protecting Human Rights: a Global Overview</em>. It can be printed in different sizes [from A5 (148 × 210 mm) to A2 (420 x 594 mm)]</p>
+            <div class="box_vertical_a4_container"><iframe class="box_vertical_a4" src="https://drive.google.com/file/d/1fwxJWWVKcVFC4h3CLEJFJ5jUiNjVMMQZ/preview"></iframe></div>
             <p>[nbsp]</p>
-            <div class="download"><a href="https://drive.google.com/open?id=1JwBjmAWeoEpZE3sbaXwyc_LI2GA_qH09" target="_blank"> <img class="icona_download" src="files/eiuc/icona_download.svg" alt="icona download"></a>
-                <p class="titolo_gc_europe"><a class="download" href="https://drive.google.com/open?id=1JwBjmAWeoEpZE3sbaXwyc_LI2GA_qH09" target="_blank">Download</a></p>
+            <div class="download"><a href="https://drive.google.com/open?id=1fwxJWWVKcVFC4h3CLEJFJ5jUiNjVMMQZ" target="_blank" download="Info Sheet MOOC PPHR 2020.pdf"> <img class="icona_download" src="files/eiuc/icona_download.svg" alt="icona download"></a>
+                <p class="titolo_gc_europe"><a class="download" href="https://drive.google.com/open?id=1fwxJWWVKcVFC4h3CLEJFJ5jUiNjVMMQZ" target="_blank" download="Info Sheet MOOC PPHR 2020.pdf">Download</a></p>
             </div>
         </div>
     </div>
