added pics - newsletter and initial draft newsletter

--- a/website/02-Education/moocs/pphr/media-toolkit.html
+++ b/website/02-Education/moocs/pphr/media-toolkit.html
@@ -103,19 +103,19 @@
 
 
 <!-- FB POSTS -->
-<p>{{file::eiuc/promo-ungs-2019/fb-posts.php}}</p>
+<p>{{file::eiuc/promo-pphr-2020/fb-posts.php}}</p>
 
 
 <!-- TW POSTS -->
-<p>{{file::eiuc/promo-ungs-2019/tw-posts.php}}</p>
+<p>{{file::eiuc/promo-pphr-2020/tw-posts.php}}</p>
 
 
 <!-- IG POSTS -->
-<p>{{file::eiuc/promo-ungs-2019/insta-posts.php}}</p>
+<p>{{file::eiuc/promo-pphr-2020/insta-posts.php}}</p>
 
 
 <!-- IMAGES POSTS -->
-<p>{{file::eiuc/promo-ungs-2019/img-posts.php}}</p>
+<p>{{file::eiuc/promo-pphr-2020/img-posts.php}}</p>
 
 
 <!-- IMAGES MEDIAKIT -->
@@ -154,8 +154,8 @@
         <div class="list_accordion">
             <p class="margin_bottom_20">This document contains the newsletter that can be used on <a class="titolo_gc_europe" href="https://mailchimp.com" target="_blank">MailChimp</a> or any other Mass mailing system that supports HTML emails.</p>
             <p>[nbsp]</p>
-            <div class="download"><a href="https://drive.google.com/open?id=1JNWn7Z7fCpOTp0_hTtVNxS0VjiMBX3xZ" target="_blank"> <img class="icona_download" src="files/eiuc/icona_download.svg" alt="icona download"></a>
-                <p class="titolo_gc_europe"><a class="download" href="https://drive.google.com/open?id=1JNWn7Z7fCpOTp0_hTtVNxS0VjiMBX3xZ" target="_blank">Download</a></p>
+            <div class="download"><a href="files/eiuc/pphr/Media-Toolkit/newsletter-mooc-pphr.zip" download="Newsletter-HTML.zip"> <img class="icona_download" src="files/eiuc/icona_download.svg" alt="icona download"></a>
+                <p class="titolo_gc_europe"><a class="download" href="files/eiuc/pphr/Media-Toolkit/newsletter-mooc-pphr.zip" download="Newsletter-HTML.zip">Download</a></p>
             </div>
         </div>
     </div>
