media-toolkit-pics initial commit

--- a/website/02-Education/moocs/pphr/media-toolkit.html
+++ b/website/02-Education/moocs/pphr/media-toolkit.html
@@ -132,8 +132,8 @@
         <div class="list_accordion">
             <p class="margin_bottom_20">This archive contains some pictures in high resolution that can be used on website, social media and printed materials.</p>
             <p>[nbsp]</p>
-            <div class="download"><a href="files/eiuc/mooc-ungs/media-toolkit-pictures/MOOC%20-%20Children%20Deprived%20of%20Liberty%20-%20Learning%20from%20the%20UN%20Global%20Study.zip" target="_blank"> <img class="icona_download" src="files/eiuc/icona_download.svg" alt="icona download"></a>
-                <p class="titolo_gc_europe"><a class="download" href="files/eiuc/mooc-ungs/media-toolkit-pictures/MOOC%20-%20Children%20Deprived%20of%20Liberty%20-%20Learning%20from%20the%20UN%20Global%20Study.zip" target="_blank">Download</a></p>
+            <div class="download"><a href="files/eiuc/pphr/Media-Toolkit/mediatoolkit-pics-pphr.zip" target="_blank" download="Media-Toolkit-PICS.zip"> <img class="icona_download" src="files/eiuc/icona_download.svg" alt="icona download"></a>
+                <p class="titolo_gc_europe"><a class="download" href="files/eiuc/pphr/Media-Toolkit/mediatoolkit-pics-pphr.zip" target="_blank" download="Media-Toolkit-PICS.zip">Download</a></p>
             </div>
         </div>
     </div>
