Manfred fixed emails - added publication

--- a/website/04-About-us/Staff/Headquarters/01-secretariat.html
+++ b/website/04-About-us/Staff/Headquarters/01-secretariat.html
@@ -11,11 +11,14 @@
                 <p class="margin_bottom_20">In 2016 he was appointed Independent Expert leading the UN Global Study on Children Deprived of Liberty.</p>
                 <p class="margin_bottom_20">He was Director of the Netherlands Institute of Human Rights at Utrecht University (SIM: 1987-1989) and of the Ludwig Boltzmann Institute of Human Rights at Vienna University (BIM: 1992-2019) as well as Visiting Professor at the University of Lund (2002-2003), the Graduate Institute of International and Development Studies in Geneva (2008-2009), and at Stanford University in Palo Alto (2014).</p>
                 <p class="margin_bottom_20">He is author of more than 600 publications in the fields of public and international law and human rights.</p>
-                <div class="download margin_bottom_20"><a href="files/eiuc/staff/MANFRED_NOWAK_CV.pdf" download="files/eiuc/staff/MANFRED_NOWAK_CV.pdf"><img class="icona_download" src="files/eiuc/icona_download.svg" alt="icona download"></a>
-                    <p class="titolo_gc_europe"><a class="download" href="files/eiuc/staff/MANFRED_NOWAK_CV.pdf" download="">CV Download</a></p>
+                <div class="download margin_bottom_20"><a href="files/eiuc/staff/MANFRED_NOWAK_CV.pdf" download="Manfred Nowak CV.pdf"><img class="icona_download" src="files/eiuc/icona_download.svg" alt="icona download"></a>
+                    <p class="titolo_gc_europe"><a class="download" href="files/eiuc/staff/MANFRED_NOWAK_CV.pdf" download="Manfred Nowak CV.pdf">CV Download</a></p>
+                </div>
+                <div class="download margin_bottom_20"><a href="files/eiuc/staff/Manfred Nowak_List of Publications_May 2020.pdf" download="Manfred Nowak - Publications (May 2020).pdf"><img class="icona_download" src="files/eiuc/icona_download.svg" alt="icona download"></a>
+                    <p class="titolo_gc_europe"><a class="download" href="files/eiuc/staff/Manfred Nowak_List of Publications_May 2020.pdf" download="Manfred Nowak - Publications (May 2020).pdf">CV Download</a></p>
                 </div>
 
-                <p>Email: <a class="titolo_gc_europe" href="mailto:manfred.nowak@eiuc.org">manfred.nowak@eiuc.org</a></p>
+                <p>Email: <a class="titolo_gc_europe" href="mailto:manfred.nowak@gchumanrights.org">manfred.nowak@gchumanrights.org</a></p>
                 <p>Phone: <a class="titolo_gc_europe" href="tel:+39 347 6263102">+39 347 626 3102</a></p>
             </div>
             <div class="accordion accordion_gc_south_europe read_more">
