--- a/website/02-Education/moocs/pphr/outline.html
+++ b/website/02-Education/moocs/pphr/outline.html
@@ -165,7 +165,7 @@
     text-align: center;
 }
 </style>
-<p class="subtitle_page_programme">Course Outline</p>
+<!-- <p class="subtitle_page_programme">Course Outline</p> -->
 <!-- <p class="margin_bottom_20">The course encompasses a 9-week period. Participants are expected to engage in approximately 45 hours of active learning through readings, videos, discussions, group-work/role-plays and quizzes. </p>
 <p class="margin_bottom_20">The course is articulated in four modules:</p>
 <p class="margin_bottom_20"><strong>Module 1</strong> focuses on <strong>the general framework of the Study</strong> and looks at the legal framework, applicable standards, guiding principles, definitions, objectives and methodology. It also offers an overview of the history of the Global Study and its links with the work of the UN CRC Committee and the Special Rapporteur on the Sale and Sexual Exploitation of Children.</p>
