--- a/website/04-About-us/Staff/Headquarters/01-secretariat.html
+++ b/website/04-About-us/Staff/Headquarters/01-secretariat.html
@@ -15,7 +15,7 @@
                     <p class="titolo_gc_europe"><a class="download" href="files/eiuc/staff/MANFRED_NOWAK_CV.pdf" download="Manfred Nowak CV.pdf">CV Download</a></p>
                 </div>
                 <div class="download margin_bottom_20"><a href="files/eiuc/staff/Manfred Nowak_List of Publications_May 2020.pdf" download="Manfred Nowak - Publications (May 2020).pdf"><img class="icona_download" src="files/eiuc/icona_download.svg" alt="icona download"></a>
-                    <p class="titolo_gc_europe"><a class="download" href="files/eiuc/staff/Manfred Nowak_List of Publications_May 2020.pdf" download="Manfred Nowak - Publications (May 2020).pdf">CV Download</a></p>
+                    <p class="titolo_gc_europe"><a class="download" href="files/eiuc/staff/Manfred Nowak_List of Publications_May 2020.pdf" download="Manfred Nowak - Publications (May 2020).pdf">List of Publications Download</a></p>
                 </div>
 
                 <p>Email: <a class="titolo_gc_europe" href="mailto:manfred.nowak@gchumanrights.org">manfred.nowak@gchumanrights.org</a></p>
