fixes to Sergio Vieira de Mello

--- a/website/02-Education/moocs/pphr/01-about.html
+++ b/website/02-Education/moocs/pphr/01-about.html
@@ -22,7 +22,7 @@
     </p>
 </blockquote>
 <p>[nbsp]</p>
-<p>— Sergio Vieira de Mello, Brazilian United Nations diplomat<!--<em>International human rights and the politics of memory: limits and challenges</em>, 2011, p.608.--></p>
+<p>— Sergio Vieira de Mello<!--<em>International human rights and the politics of memory: limits and challenges</em>, 2011, p.608.--></p>
 
 
 
