free certificate fix

--- a/website/02-Education/moocs/pphr/01-about.html
+++ b/website/02-Education/moocs/pphr/01-about.html
@@ -97,7 +97,7 @@
     </div>
     <div class="text_accordion">
         <p class="margin_bottom_20">Given the flexible nature of the MOOC, it would be complex to issue a certificate for each varying degree and level of completion. For this reason, we give you the possibility to either audit the course to the extent that you wish or earn a certificate of participation upon completion of all 7 classes. If you decide to audit the course, you will not receive a certificate, but you can print your progress page if you want evidence of your achievement. </p>
-        <p class="margin_bottom_20">If you would like or need to have official proof that you have completed this MOOC, we offer you the option of requesting a Certificate of Completion with a Transcript of Records. In order to do so, you will have to successfully complete and pass all the 7 Classes of the course and related Quizzes.</p>
+        <p class="margin_bottom_20">If you would like or need to have official proof that you have completed this MOOC, we offer you the option of requesting a Free Certificate of Completion with a Transcript of Records. In order to do so, you will have to successfully complete and pass all the 7 Classes of the course and related Quizzes.</p>
     </div>
 </div>
 <div class="accordion accordion_gc_europe">
